@@ -1,0 +1,1 @@
+cdecl @ @ @ struct S; explain int S @ 65
